# nninteractive

./: .gitignore
backend/nninteractive_service/: README.md  pyproject.toml
backend/nninteractive_service/nninteractive_service/: app.py  config.py  errors.py  image_loader.py  inference.py  models.py  schemas.py  service.py  storage.py  transforms.py
backend/nninteractive_service/scripts/: download_model.py  smoke_remote_server.py
backend/nninteractive_service/testdata/: synthetic_sphere_zyx.npy
backend/nninteractive_service/tests/: test_core.py  test_image_loader.py  test_remote_engine.py  test_transforms.py
backend/nninteractive_service/unity/NNInteractiveUnityClient/: README.md
backend/nninteractive_service/unity/NNInteractiveUnityClient/Runtime/: NNInteractiveClient.cs  NNInteractiveMaskCodec.cs  NNInteractiveModels.cs  NNInteractiveUnityClient.asmdef  NNInteractiveUnityTextureUtil.cs
backend/nninteractive_service/unity/NNInteractiveUnityClient/Samples/: NNInteractiveClientExample.cs
docs/: nninteractive-backend-development-plan.md  unity-nninteractive-communication-protocol.md  vtk-nninteractive-ai-roi-segmentation.md
reference/: README.md
