[project]
name = "nninteractive-unity-backend"
version = "0.1.0"
description = "Unity-facing nnInteractive segmentation backend MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
real = [
  "nnInteractive",
  "torch",
  "SimpleITK",
  "nibabel",
]
remote = [
  "nninteractive-client",
  "httpx",
  "blosc2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
